Fixing search friend